--- a/views/login.html
+++ b/views/login.html
@@ -1,1 +1,13 @@
-login.html
+<div class="form-group">
+	<label>Username</label>
+	<input class="form-control" ng-model="user.username">
+</div>
+
+<div class="form-group">
+	<label>Password</label>
+	<input type="password" class="form-control" ng-model="user.password">
+</div>
+
+<div class="form-group text-center">
+	<button class="btn btn-primary btn-lg" ng-click="login()">Login</button>
+</div>
