--- a/views/signup.html
+++ b/views/signup.html
@@ -1,10 +1,10 @@
 <div class="form-group">
-	<label>Kasutajanimi</label>
+	<label>Username</label>
 	<input class="form-control" ng-model="user.username">
 </div>
 
 <div class="form-group">
-	<label>Ees- ja perekonnanimi</label>
+	<label>Real name</label>
 	<input class="form-control" ng-model="user.name">
 </div>
 
@@ -14,6 +14,10 @@
 </div>
 
 <div class="form-group">
-	<label>Parool</label>
+	<label>Password</label>
 	<input type="password" class="form-control" ng-model="user.password">
+</div>
+
+<div class="form-group text-center">
+	<button class="btn bnt-primary btn-lg" ng-click="signup()">Sign up</button>
 </div>
