--- a/views/home.html
+++ b/views/home.html
@@ -1,3 +1,7 @@
-<div class="list-group">
-	<a class="list-group-item">fotooo</a>
+<div class="form-group">
+    <div class="row">
+        <div class="col-sm-4 insta-image" ng-repeat="photo in photos"><img class="img-rounded img-responsive" ng-src="{{ baseUrl + '/media/' + photo.filename }}">
+        <div class="insta-overlay">bleh</div>
+        </div>
+    </div>
 </div>
