--- a/views/upload.html
+++ b/views/upload.html
@@ -2,8 +2,8 @@
     <div class="row">
         <div class="col-md-8">
             <div class="form-group">
-                <label>Tell something about the picture</label>
-                <input type="text" class="form-control">
+                <label>Tell something about the photo</label>
+                <input type="text" class="form-control" ng-model="photo.title">
             </div>
 
             <div class="form-group" ng-class="{ 'has-error': !fileIsAllowed && hasFile}">
@@ -13,7 +13,7 @@
             </div>
 
             <div class="form-group text-center">
-                <button class="btn btn-success btn-lg" ng-disabled="!fileIsAllowed || !hasFile">Upload it</button>
+                <button class="btn btn-success btn-lg" ng-disabled="!fileIsAllowed || !hasFile" ng-click="upload()">Upload it</button>
             </div>
         </div>
 
