--- a/views/photo.html
+++ b/views/photo.html
@@ -1,30 +1,27 @@
 <div class="form-group">
-    <img class="img-rounded" style="width: 100%" ng-src="{{ baseUrl + '/media/' + photo.filename }}">
-    <div class="clearfix" style="">
-        <span class="pull-right" ng-show="$root.user"><button class="btn btn-warning btn-xs" ng-click="like(photo)"><span class="glyphicon glyphicon-thumbs-up"></span> like</button>
-        </span>
-        <span class="pull-left"><b>{{ photo.user.username }}</b></span>
+    <div class="row">
+        <div class="col-md-4">
+            <img class="img-rounded" style="width: 100%" ng-src="{{ baseUrl + '/media/' + photo.filename }}">
+        </div>
+        <div class="col-md-8">
+            <h4>Comments <button class="btn btn-danger btn-xs pull-right" ng-show="$root.user.id == photo.user_id" ng-click="deletePhoto()"><span class="fui-trash"></span> Delete photo</button></h4>
+            <hr>
+
+            <div class="form-group" ng-repeat="comment in photo.comments">
+                <b>{{ comment.user.username }}</b> {{ comment.text }}
+            </div>
+
+            <form>
+                <div class="form-group" ng-show="$root.user">
+                    <div class="input-group">
+                        <input class="form-control" placeholder="Submit a comment.." ng-model="text">
+                        <div class="input-group-btn">
+                            <button class="btn btn-primary" ng-click="submitComment()">Submit</button>
+                        </div>
+                    </div>
+                </div>
+            </form>
+        </div>
     </div>
-    <div class="clearfix" style="">
-        <span class="pull-left">
-        	{{ photo.likes.length + ' ' + (photo.likes.length == 1 ? 'like' : 'likes') }}
-        	<span ng-show="photo.likes.length > 0">(<span ng-repeat="like in photo.likes">{{ like.username + ($last ? '' : ', ')}}</span>)</span>
-        </span>
-    </div>
-</div>
 
-<h4>Comments</h4>
-<hr>
-
-<div class="form-group" ng-repeat="comment in photo.comments">
-	<b>{{ comment.user.username }}</b> {{ comment.text }}
-</div>
-
-<div class="form-group" ng-show="$root.user">
-	<div class="input-group">
-		<input class="form-control" placeholder="Submit a comment.." ng-model="text">
-		<div class="input-group-btn">
-			<button class="btn btn-primary" ng-click="submitComment()">Submit</button>
-		</div>
-	</div>
 </div>
