--- a/views/profile.html
+++ b/views/profile.html
@@ -1,10 +1,19 @@
 <h3>{{ user.name }} <small>{{ user.username }}</small></h3>
 <hr>
 
-<div class="form-group">
-    <div class="row">
-        <div class="col-sm-4 insta-image" ng-repeat="photo in user.photos"><img class="img-rounded img-responsive" ng-src="{{ baseUrl + '/media/' + photo.filename }}">
-        <div class="insta-overlay">bleh</div>
+<div class="text-center">
+    <div class="form-group text-center" ng-repeat="photo in user.photos">
+        <div style="display: inline-block; width: 400px">
+        	<a ui-sref="photo({id: photo.id})">
+            	<img class="img-rounded" style="width: 100%" ng-src="{{ baseUrl + '/media/' + photo.filename }}">
+            </a>
+            <div class="clearfix" style="">
+            	<span class="pull-right" ng-show="$root.user"><button class="btn btn-warning btn-xs" ng-click="like(photo)"><span class="glyphicon glyphicon-thumbs-up"></span> like</button></span>
+            	<span class="pull-left"><b>{{ user.username }}</b></span>
+            </div>
+            <div class="clearfix" style="">
+            	<span class="pull-left">{{ photo.likes.length + ' ' + (photo.likes.length == 1 ? 'like' : 'likes') }}</span>
+            </div>
         </div>
     </div>
 </div>
